# hal_espressif

./: .gitignore  .gitmodules  README.md  git_submodules.txt  requirements.txt
.github/: CODEOWNERS
components/driver/: adc.c  periph_ctrl.c
components/esp32/: clk.c  project_include.cmake  spiram.c  spiram_psram.c
components/esp32c3/: Kconfig  clk.c
components/esp32s2/: clk.c  spiram.c  spiram_psram.c
components/esp32s3/: clk.c
components/esp_adc/: adc_cali.c  adc_cali_curve_fitting.c  adc_common.c
components/esp_app_format/: esp_app_desc.c
components/esp_common/: CMakeLists.txt  project_include.cmake
components/esp_common/include/: esp_assert.h  esp_attr.h  esp_bit_defs.h  esp_check.h  esp_compiler.h  esp_err.h  esp_types.h
components/esp_common/src/: esp_err_to_name.c
components/esp_driver_dac/: dac_common.c  dac_priv_common.h
components/esp_event/: event_send.c
components/esp_hal_ana_conv/: adc_hal.c  adc_hal_common.c  adc_oneshot_hal.c
components/esp_hal_cam/: isp_hal.c  mipi_csi_hal.c
components/esp_hal_dma/: dw_gdma_hal.c
components/esp_hal_emac/: emac_hal.c
components/esp_hal_gpspi/: spi_hal_iram.c  spi_slave_hd_hal.c
components/esp_hal_lcd/: mipi_dsi_hal.c
components/esp_hal_ledc/: ledc_hal.c
components/esp_hal_mspi/: spi_flash_hal.c  spi_flash_hal_common.inc
components/esp_hal_systimer/: rom_patch.c  systimer_hal.c
components/esp_hal_twai/: twai_hal_v2.c
components/esp_hal_uart/: uart_hal.c
components/esp_hw_support/: CMakeLists.txt  adc_share_hw_ctrl.c  clk_ctrl_os.c  clk_utils.c  esp_clk.c  esp_clock_output.c  esp_gpio_reserve.c  heap_align_hw.c  hw_random.c  mac_addr.c  modem_clock.c  mspi_timing_tuning.c  periph_ctrl.c  regi2c_ctrl.c  rtc_module.c  sar_periph_ctrl_common.c  sar_tsens_ctrl.c  sleep_clock.c  sleep_console.c  sleep_cpu.c  sleep_event.c  sleep_gpio.c  (+6 more)
tools/: esp_bin2c_array.py  idf_monitor.py  idf_tools.py  zephyr_tools.json
west/: tools.py  update.py  west-commands.yml
zephyr/: CMakeLists.txt  Kconfig  Kconfig.console  Kconfig.pm  module.yml  requirements.txt
(+1344 files in other folders)
